--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-<h1>📘 Acronym Flashcards & Quiz</h1>
+<h1>📘 MYCC Flashcards & Quiz</h1>
 
 <div id="uploadSection">
   <input type="file" id="fileInput" accept=".csv,.xlsx,.xls,.docx,.pdf" />
