--- a/index.html
+++ b/index.html
@@ -27,22 +27,51 @@
     .score-board { text-align: center; font-weight: bold; margin: 10px; }
     #uploadSection { text-align: center; margin-bottom: 20px; }
     .loading { text-align: center; margin: 10px; font-style: italic; color: gray; }
+    .chatbot-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #007acc;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      font-size: 24px;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+    .chat-window {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      width: 300px;
+      max-height: 400px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      display: none;
+      flex-direction: column;
+      overflow: hidden;
+    }
+    .chat-header { background: #007acc; color: white; padding: 10px; text-align: center; font-weight: bold; }
+    .chat-messages { flex: 1; padding: 10px; overflow-y: auto; font-size: 0.9em; }
+    .chat-input { display: flex; border-top: 1px solid #ccc; }
+    .chat-input input { flex: 1; padding: 10px; border: none; outline: none; }
+    .chat-input button { background: #007acc; color: white; border: none; padding: 10px 15px; cursor: pointer; }
   </style>
 </head>
 <body>
 
 <h1>📘 AI-Powered Acronym Flashcards & Quiz</h1>
-
 <div id="uploadSection">
   <input type="file" id="fileInput" accept=".csv,.xlsx,.xls,.docx,.pdf" />
   <p style="font-size:0.9em;">Upload CSV, Excel, Word or PDF containing acronyms</p>
 </div>
-
 <div class="tab-controls">
   <button onclick="showTab('flashcards')">🃏 Flashcards</button>
   <button onclick="startQuiz()">🧠 Quiz</button>
 </div>
-
 <div class="score-board" id="scoreBoard">Score: 0 / 0</div>
 <div class="loading" id="loadingMessage" style="display: none;">🔄 Generating explanations with AI...</div>
 <div class="flashcards active" id="flashcardsContainer"></div>
@@ -50,171 +79,51 @@
   <div class="quiz-box" id="quizBox"></div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
+<!-- Chatbot Tutor -->
+<button class="chatbot-button" onclick="toggleChatbot()">💬</button>
+<div class="chat-window" id="chatWindow">
+  <div class="chat-header">Ask the AI Tutor</div>
+  <div class="chat-messages" id="chatMessages"></div>
+  <div class="chat-input">
+    <input type="text" id="chatInput" placeholder="Ask a question..." onkeydown="if(event.key==='Enter')sendChat()" />
+    <button onclick="sendChat()">▶</button>
+  </div>
+</div>
+
 <script>
-let acronyms = [
-  { acronym: "AAA", definition: "Authentication, Authorization, and Accounting", explanation: "Verifies identity, grants access, and logs actions." },
-  { acronym: "ACL", definition: "Access Control List", explanation: "Controls which users/systems can access resources." },
-  { acronym: "ADF", definition: "Automatic Document Feeder", explanation: "Feeds multiple pages into a scanner or printer." },
-  { acronym: "AES", definition: "Advanced Encryption Standard", explanation: "Encrypts sensitive data for security." },
-  { acronym: "BIOS", definition: "Basic Input/Output System", explanation: "Starts and tests hardware before loading the OS." },
-  { acronym: "CPU", definition: "Central Processing Unit", explanation: "Performs all the logic and calculations in a computer." },
-  { acronym: "DHCP", definition: "Dynamic Host Configuration Protocol", explanation: "Automatically assigns IP addresses to devices." },
-  { acronym: "DNS", definition: "Domain Name System", explanation: "Translates website names to IP addresses." },
-];
-
-let quizIndex = 0;
-let score = 0;
-let quizData = [];
-
-document.getElementById('fileInput').addEventListener('change', handleFileUpload);
-
-function showTab(tab) {
-  document.getElementById('flashcardsContainer').classList.remove('active');
-  document.getElementById('quizSection').classList.remove('active');
-  if (tab === 'flashcards') {
-    document.getElementById('flashcardsContainer').classList.add('active');
-  } else {
-    document.getElementById('quizSection').classList.add('active');
-  }
+function toggleChatbot() {
+  const chat = document.getElementById("chatWindow");
+  chat.style.display = chat.style.display === "flex" ? "none" : "flex";
 }
 
-function renderFlashcards() {
-  const container = document.getElementById('flashcardsContainer');
-  container.innerHTML = '';
-  acronyms.forEach(async (card, index) => {
-    const div = document.createElement('div');
-    div.className = 'card';
-    div.innerHTML = `
-      <div class="card-inner">
-        <div class="card-front">
-          <div class="acronym">${card.acronym}</div>
-        </div>
-        <div class="card-back">
-          <div class="definition">${card.definition}</div>
-          <div class="explanation" id="exp-${index}">${card.explanation || '(No explanation)'}</div>
-          ${!card.explanation ? `<button onclick="generateSingleExplanation(${index})">✨ Generate Explanation</button>` : ''}
-        </div>
-      </div>`;
-    container.appendChild(div);
-  });
-}
+async function sendChat() {
+  const input = document.getElementById("chatInput");
+  const question = input.value.trim();
+  if (!question) return;
+  const messages = document.getElementById("chatMessages");
+  messages.innerHTML += `<div><strong>You:</strong> ${question}</div>`;
+  input.value = '';
+  messages.innerHTML += `<div><em>AVA is thinking...</em></div>`;
+  messages.scrollTop = messages.scrollHeight;
 
-function startQuiz() {
-  showTab('quiz');
-  score = 0;
-  quizIndex = 0;
-  quizData = [...acronyms].sort(() => 0.5 - Math.random()).slice(0, 20);
-  updateScore();
-  nextQuestion();
-}
-
-function updateScore() {
-  document.getElementById('scoreBoard').innerText = `Score: ${score} / ${quizIndex}`;
-}
-
-function nextQuestion() {
-  const quizBox = document.getElementById('quizBox');
-  if (quizIndex >= quizData.length) {
-    quizBox.innerHTML = `<h3>🎉 Quiz Complete!</h3><p>Your score: ${score}/${quizData.length}</p>`;
-    return;
-  }
-
-  const question = quizData[quizIndex];
-  let options = [question.definition];
-  while (options.length < 4) {
-    const opt = acronyms[Math.floor(Math.random() * acronyms.length)].definition;
-    if (!options.includes(opt)) options.push(opt);
-  }
-  options.sort(() => Math.random() - 0.5);
-
-  quizBox.innerHTML = `
-    <div><strong>(${quizIndex + 1}/${quizData.length}) What does "${question.acronym}" stand for?</strong></div>
-    ${options.map(opt => `<div class="quiz-option"><button onclick="checkAnswer('${opt.replace(/'/g, "\\'")}', '${question.definition.replace(/'/g, "\\'")}')">${opt}</button></div>`).join('')}
-  `;
-}
-
-function checkAnswer(selected, correct) {
-  if (selected === correct) score++;
-  quizIndex++;
-  updateScore();
-  nextQuestion();
-}
-
-async function generateExplanation(acronym, definition) {
-  const prompt = `Explain what \"${acronym}\" means: ${definition}`;
   const response = await fetch("https://api-inference.huggingface.co/models/tiiuae/falcon-7b-instruct", {
     method: "POST",
     headers: {
       "Authorization": "Bearer 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",
       "Content-Type": "application/json"
     },
-    body: JSON.stringify({ inputs: prompt, options: { wait_for_model: true } })
+    body: JSON.stringify({ inputs: question, options: { wait_for_model: true } })
   });
   const data = await response.json();
-  return data?.[0]?.generated_text?.replace(prompt, "").trim() || "";
+  const answer = data?.[0]?.generated_text?.replace(question, '').trim() || "Sorry, I couldn’t find an answer.";
+  messages.innerHTML = messages.innerHTML.replace('<div><em>AVA is thinking...</em></div>', '');
+  messages.innerHTML += `<div><strong>AVA:</strong> ${answer}</div>`;
+  messages.scrollTop = messages.scrollHeight;
 }
-
-async function generateSingleExplanation(index) {
-  const card = acronyms[index];
-  const expEl = document.getElementById(`exp-${index}`);
-  expEl.innerText = '⏳ Generating...';
-  const result = await generateExplanation(card.acronym, card.definition);
-  acronyms[index].explanation = result;
-  expEl.innerText = result;
-}
-
-async function handleFileUpload(event) {
-  const file = event.target.files[0];
-  const reader = new FileReader();
-  document.getElementById('loadingMessage').style.display = 'block';
-
-  if (file.name.endsWith(".csv") || file.name.endsWith(".xlsx") || file.name.endsWith(".xls")) {
-    reader.onload = async function (e) {
-      const data = new Uint8Array(e.target.result);
-      const workbook = XLSX.read(data, { type: 'array' });
-      const sheet = workbook.Sheets[workbook.SheetNames[0]];
-      const rows = XLSX.utils.sheet_to_json(sheet);
-      for (const row of rows) {
-        if (row.Acronym && row.Definition) {
-          const explanation = row.Explanation || await generateExplanation(row.Acronym, row.Definition);
-          acronyms.push({ acronym: row.Acronym.trim(), definition: row.Definition.trim(), explanation });
-        }
-      }
-      renderFlashcards();
-      document.getElementById('loadingMessage').style.display = 'none';
-    };
-    reader.readAsArrayBuffer(file);
-  } else if (file.name.endsWith(".pdf")) {
-    reader.onload = async function () {
-      const pdf = await pdfjsLib.getDocument({ data: reader.result }).promise;
-      let text = '';
-      for (let i = 1; i <= pdf.numPages; i++) {
-        const page = await pdf.getPage(i);
-        const content = await page.getTextContent();
-        text += content.items.map(item => item.str).join(' ') + '\n';
-      }
-      const lines = text.split('\n');
-      for (const line of lines) {
-        const parts = line.split('-');
-        if (parts.length >= 2) {
-          const acronym = parts[0].trim();
-          const definition = parts[1].trim();
-          const explanation = parts.slice(2).join('-').trim() || await generateExplanation(acronym, definition);
-          acronyms.push({ acronym, definition, explanation });
-        }
-      }
-      renderFlashcards();
-      document.getElementById('loadingMessage').style.display = 'none';
-    };
-    reader.readAsArrayBuffer(file);
-  }
-}
-
-renderFlashcards();
 </script>
+
 </body>
 </html>
+
 
 
